--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nattreid/analytics-crm",
+    "name": "nattreid/analytics",
     "description": "Analytics for CRM",
     "type": "library",
     "license": ["Unlicense"],
