--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,40 @@
 {
-    "name": "nattreid/analytics",
-    "description": "Analytics for CRM",
-    "type": "library",
-    "license": ["Unlicense"],
-    "authors": [
-        {
-            "name": "Attreid",
-            "email": "attreid@gmail.com"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.newtravel.cz"
-        }
-    ],
-    "require": {
-        "php": ">= 5.6",
-        "nattreid/crm": "dev-master",
-        "nattreid/tracking": "~1.0",
-        "nattreid/vPaginator": "~1.0"
-    },
-    "require-dev": {
-        "nette/tester": "~1.7"
-    },
-    "autoload": {
-        "classmap": ["src/"]
+  "name": "nattreid/analytics",
+  "description": "Analytics for CRM",
+  "type": "library",
+  "license": [
+    "Unlicense"
+  ],
+  "authors": [
+    {
+      "name": "Attreid",
+      "email": "attreid@gmail.com"
     }
+  ],
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://packages.newtravel.cz"
+    }
+  ],
+  "require": {
+    "php": ">= 5.6",
+    "nattreid/crm": "dev-master",
+    "nattreid/tracking": "~1.0",
+    "nattreid/vPaginator": "~1.0"
+  },
+  "require-dev": {
+    "nette/tester": "~1.7",
+    "nattreid/form": "dev-master",
+    "attreid/datagrid": "dev-master",
+    "nattreid/filemanager": "dev-master",
+    "kdyby/forms-replicator": "dev-master",
+    "kdyby/translation": "dev-master",
+    "nextras/forms": "dev-master"
+  },
+  "autoload": {
+    "classmap": [
+      "src/"
+    ]
+  }
 }
