--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,7 @@
     "nattreid/vPaginator": "~1.0"
   },
   "require-dev": {
-    "nette/tester": "~1.7",
-    "nattreid/form": "dev-master",
-    "nattreid/filemanager": "dev-master",
-    "kdyby/forms-replicator": "dev-master",
-    "kdyby/translation": "dev-master",
-    "nextras/forms": "dev-master"
+    "nette/tester": "~1.7"
   },
   "autoload": {
     "classmap": [
