--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "nattreid/vPaginator": "~1.0"
   },
   "require-dev": {
-    "nette/tester": "~1.7"
+    "nette/tester": "~1.7",
+    "kdyby/translation": "dev-master"
   },
   "autoload": {
     "classmap": [
