--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,12 @@
   ],
   "require": {
     "php": ">= 5.6",
-    "nattreid/crm": "dev-master",
+    "nattreid/crm": "~1.0",
     "nattreid/tracking": "~1.0",
     "nattreid/vPaginator": "~1.0"
   },
   "require-dev": {
-    "nette/tester": "~1.7",
-    "kdyby/translation": "dev-master"
+    "nette/tester": "~1.7"
   },
   "autoload": {
     "classmap": [
