--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "analytics",
-  "description": "Analytics for CRM",
+  "description": "Analytics for CMS",
   "license": [
     "Unlicense"
   ],
@@ -15,7 +15,7 @@
     "*.json"
   ],
   "dependencies": {
-    "crm": "git@git.newtravel.cz:nattreid/crm.git#latest",
+    "cms": "git@git.newtravel.cz:nattreid/cms.git#latest",
     "tracking": "git@git.newtravel.cz:nattreid/tracking.git#latest",
     "Chart.js": "~2.1"
   },
