--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,14 @@
     }
   ],
   "require": {
-    "php": ">= 5.6",
+    "php": ">= 7.0",
     "nattreid/cms": "~1.0",
     "nattreid/tracking": "~1.0",
     "nattreid/vPaginator": "~1.0"
   },
   "require-dev": {
-    "nette/tester": "~1.7"
+    "nette/tester": "~1.8",
+    "tracy/tracy": "~2.4"
   },
   "autoload": {
     "classmap": [
