--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "analytics",
+  "name": "nattreid-analytics",
   "description": "Analytics for CMS",
   "main": "gulpfile.js",
   "repository": {
     "type": "git",
-    "url": "git@git.newtravel.cz:nattreid/analytics.git"
+    "url": "git@github.com:nattreid/analytics.git"
   },
   "author": "Attreid",
-  "license": "Unlicense",
+  "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.12",
