--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,8 @@
     "Chart.js": "~2"
   },
   "resolutions": {
-    "nette.ajax.js": "~2",
+    "nette.ajax.js": "~2.3",
     "jquery": "~3",
-    "nette-forms": "~2"
+    "nette-forms": "^2.3"
   }
 }
