--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
 	"type": "git",
 	"url": "git@github.com:nattreid/analytics.git"
   },
-  "author": "Attreid",
+  "author": {
+	"name": "Attreid",
+	"email": "attreid@gmail.com"
+  },
   "license": "MIT",
   "dependencies": {
 	"nattreid-cms": "~1.6",
