--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nattreid-analytics",
   "description": "Analytics for CMS",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "main": "./assets/analytics.js",
   "repository": {
 	"type": "git",
@@ -13,7 +13,7 @@
   },
   "license": "MIT",
   "dependencies": {
-	"nattreid-cms": "~1.6",
+	"nattreid-cms": "^1.8.10",
 	"nattreid-tracking": "~1.5",
 	"chart.js": "~2.7"
   },
